Bug #22242 Instance Manager: option-parsing errors
Submitted: 11 Sep 2006 20:23 Modified: 30 Nov 2006 21:13
Reporter: Paul DuBois
Status: Closed
Category:Instance Manager Severity:S2 (Serious)
Version:5.1.12 OS:
Assigned to: Bugs System Target Version:
Tags: IM

[11 Sep 2006 20:23] Paul DuBois
Description:
If my IM config file looks like this:

[manager]
bind-address=127.0.0.1
default-mysqld-path=/var/mysql/production/libexec/mysqld

[mysqld50112]

It starts up like this:

060911 13:19:14  Loading config file '/var/mysql/mysqlmanager.cnf'...
060911 13:19:14 loading the password database...
060911 13:19:14 loaded user 'paul'.
060911 13:19:14 the password database loaded successfully.
060911 13:19:14 IM pid file: '/usr/local/mysql/data/mysqlmanager.pid'; PID: 10239.
060911 13:19:14 mysqld instance 'mysqld50112' has been added successfully.
060911 13:19:14 accepting connections on ip socket
060911 13:19:14 accepting connections on unix socket /tmp/mysqlmanager.sock
060911 13:19:14 guardian: starting instance mysqld50112
060911 13:19:14 starting instance mysqld50112
060911 13:19:14  InnoDB: Started; log sequence number 0 200741
060911 13:19:14 [Note] /var/mysql/production/libexec/mysqld: ready for connections.
Version: '5.1.12-beta-debug'  socket: '/usr/local/mysql/mysql.sock'  port: 3306  Source
distribution
060911 13:19:14 [Note] SCHEDULER: Manager thread booting
060911 13:19:14 [Note] SCHEDULER: Loaded 0 events
060911 13:19:14 [Note] SCHEDULER: Suspending operations

That looks okay.

However, if my IM config file looks like this:

[manager]
bind-address=127.0.0.1
default-mysqld-path=/var/mysql/production/libexec/mysqld

[mysqld50112]
mysqld-path=/var/mysql/production/libexec/mysqld

It starts up with a zillion error messages:

060911 13:21:19  Loading config file '/var/mysql/mysqlmanager.cnf'...
060911 13:21:19 loading the password database...
060911 13:21:19 loaded user 'paul'.
060911 13:21:19 the password database loaded successfully.
060911 13:21:19 IM pid file: '/usr/local/mysql/data/mysqlmanager.pid'; PID: 10275.
060911 13:21:19 mysqld instance 'mysqld50112' has been added successfully.
Error: Memory allocated at parse.h:77 was overrun, discovered at 'parse.h:77'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'parse.h:77'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:49'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:55'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:49'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:49'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:55'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:55'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:49'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:55'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:49'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.cc:89'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'buffer.h:55'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'my_alloc.c:197'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'vio.c:144'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'vio.c:45'
060911 13:21:19 accepting connections on ip socket
060911 13:21:19 accepting connections on unix socket /tmp/mysqlmanager.sock
Error: Memory allocated at parse.h:77 was overrun, discovered at 'vio.c:232'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'vio.c:233'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'net_serv.cc:164'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'client.c:2501'Error:
Memory allocated at parse.h:77 was overrun, discovered at 'client.c:2502'Error: Memory
allocated at parse.h:77 was overrun, discovered at 'client.c:2503'Error: Memory allocated
at parse.h:77 was overrun, discovered at 'client.c:2504'Error: Memory allocated at
parse.h:77 was overrun, discovered at 
[clipped]
'client.c:2502'Error: Memory allocated at parse.h:77 was overrun, discovered at
'client.c:2503'Error: Memory allocated at parse.h:77 was overrun, discovered at
'client.c:2504'Error: Memory allocated at parse.h:77 was overrun, discovered at
'client.c:2506'Error: Memory allocated at parse.h:77 was overrun, discovered at
'vio.c:144'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'vio.c:45'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'vio.c:232'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'vio.c:233'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'net_serv.cc:164'
Error: Memory allocated at parse.h:77 was overrun, discovered at 'client.c:2501'Error:
Memory allocated at parse.h:77 was overrun, discovered at 'client.c:2502'Error: Memory
allocated at parse.h:77 was overrun, discovered at 'client.c:2503'Error: Memory allocated
at parse.h:77 was overrun, discovered at 'client.c:2504'Error: Memory allocated at
parse.h:77 was overrun, discovered at 'client.c:2506'Error: Memory allocated at parse.h:77
was overrun, discovered at 
[clipped]
'client.c:2502'Error: Memory allocated at parse.h:77 was overrun, discovered at
'client.c:2503'Error: Memory allocated at parse.h:77 was overrun, discovered at
'client.c:2504'Error: Memory allocated at parse.h:77 was overrun, discovered at
'client.c:2506'060911 13:21:19 guardian: starting instance mysqld50112
060911 13:21:19 starting instance mysqld50112
060911 13:21:19  InnoDB: Started; log sequence number 0 200741
060911 13:21:19 [Note] /var/mysql/production/libexec/mysqld: ready for connections.
Version: '5.1.12-beta-debug'  socket: '/usr/local/mysql/mysql.sock'  port: 3306  Source
distribution
060911 13:21:19 [Note] SCHEDULER: Manager thread booting
060911 13:21:19 [Note] SCHEDULER: Loaded 0 events
060911 13:21:19 [Note] SCHEDULER: Suspending operations

How to repeat:
See above.
[11 Sep 2006 20:40] Paul DuBois
I forgot to add that as IM runs, it periodically
spews out a repeat of the error messages.
[14 Sep 2006 21:43] Alexander Nozdrin
Verified as described.
We'll take care of it.
[8 Nov 2006 15:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15024

ChangeSet@1.2343, 2006-11-08 18:57:37+03:00, petr@outpost.site +1 -0
  Fix Bug #22242 Instance Manager: option-parsing errors
  
  There was a memory overrun, which resulted in safemalloc
  errors.
[20 Nov 2006 13:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15549

ChangeSet@1.2343, 2006-11-20 16:51:16+03:00, petr@outpost.site +1 -0
  Fix Bug #22242 Instance Manager: option-parsing errors
  
  There was a memory overrun, which resulted in safemalloc
  errors. Recommit with post-review fixes.
[21 Nov 2006 21:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15665

ChangeSet@1.2343, 2006-11-22 00:51:06+03:00, petr@outpost.site +1 -0
  Fix Bug #22242 Instance Manager: option-parsing errors
  
  There was a memory overrun, which resulted in safemalloc
  errors. Recommit with post-review fixes.
[22 Nov 2006 15:55] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15717

ChangeSet@1.2343, 2006-11-22 19:07:05+03:00, petr@outpost.site +1 -0
  Fix Bug #22242 Instance Manager: option-parsing errors
  
  There was a memory overrun, which resulted in safemalloc
  errors. Recommit with post-review fixes.
[23 Nov 2006 15:38] Petr Chardin
pushed to 5.1-runtime
[30 Nov 2006 2:30] Konstantin Osipov
Fixed in 5.1.13
[30 Nov 2006 21:13] Paul DuBois
Noted in 5.1.14 changelog.